# libpeer-demo

./: .gitignore  CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  idf_component.yml  main.c  peer-manager.c  wifi-manager.c
main/includes/: peer-manager.h  wifi-manager.h
web/: index.html
